--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
 <body>
     <h1>this is about page</h1>
     <p>this is about page paragraph</p>
+    <p>hello i am rohit kumar rajbhar</p>
 </body>
 </html>
